Fixed overflow issue with the Home #56

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,5 @@
 .App{
-    width: 99vw;
+    width: 100%;
     height: 99vh;
+    max-width: 98vw;
 }
