--- a/frontend/src/components/Navbar/Layout.css
+++ b/frontend/src/components/Navbar/Layout.css
@@ -6,7 +6,7 @@
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #363636;
     width: 100%;
-    max-width: 98vw;
+    max-width: 97vw;
     border-bottom: 1px solid azure;
     border-radius: 5px;
     padding: 1px 5px;
