--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -7,7 +7,7 @@
   padding: 6px;
   width: 100%;
   height: 100%;
-  max-width: 98vw;
+  max-width: 96vw;
   max-height: 99vh;
 }
 
